coding loading & reservation & menu done :fire

--- a/assets/scss/imports/core/_layouts.scss
+++ b/assets/scss/imports/core/_layouts.scss
@@ -16,6 +16,9 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
@@ -25,8 +28,9 @@ body {
   background-color: $main-bg-cl;
   color: $main-text-cl;
   font-family: $main-fonts;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1.6rem;
+  font-style: normal;
   line-height: 1;
   position: relative;
   overflow-x: hidden;
@@ -53,10 +57,7 @@ body {
 
   &.fadeout::after {
     opacity: 1;
-  }
-
-  &.--no-scroll {
-    overflow: hidden !important;
+    pointer-events: auto;
   }
 }
 
@@ -66,6 +67,6 @@ main {
 }
 
 ::selection {
-  background: #ededed;
+  background: #dcdcdc;
   color: #000;
 }
