--- a/assets/scss/imports/core/_reset.scss
+++ b/assets/scss/imports/core/_reset.scss
@@ -180,7 +180,7 @@ button {
   border: none;
   background: none;
   color: currentColor;
-  font-family: "ryo-gothic-plusn", "neue-haas-grotesk-text", sans-serif;
+  font-family: "shippori-mincho-b1", sans-serif;
 }
 
 figure,
