--- a/assets/scss/imports/core/_variables.scss
+++ b/assets/scss/imports/core/_variables.scss
@@ -1,9 +1,6 @@
 /* variables
 ------------------------------------------------------------*/
-$base-width: 1920px;
-
-$main-fonts: "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro",
-  "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
+$main-fonts: "shippori-mincho-b1", sans-serif;
 
 //color common
 $main-bg-cl: #fff;
@@ -11,7 +8,10 @@ $main-text-cl: #000;
 $black-cl: #000;
 $white-cl: #fff;
 $gray-cl: #d3d3d3;
+$green-cl: #559c21;
+$dominant-cl: unset;
 
 :root {
   --app-height: 100vh;
+  --menu-height: 100vh;
 }
