--- a/assets/scss/imports/core/_header.scss
+++ b/assets/scss/imports/core/_header.scss
@@ -40,12 +40,12 @@
   &_center {
     position: fixed;
     top: 52px;
-    left: 50%;
-    transform: translateX(-50%);
     z-index: 10;
 
+    width: 100vw;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 40px;
     color: $white-cl;
     transition: color 0.3s ease;
