--- a/assets/scss/imports/pages/_home.scss
+++ b/assets/scss/imports/pages/_home.scss
@@ -221,4 +221,314 @@
       }
     }
   }
+
+  // ===== news =====
+  .news {
+    &_container {
+      margin-top: 300px;
+    }
+
+    &_link {
+      margin: 100px auto 0;
+      font-size: 1.8rem;
+      width: fit-content;
+      position: relative;
+
+      &:after {
+        content: "";
+        position: absolute;
+        bottom: -15px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 120%;
+        height: 2px;
+        border-radius: 10px;
+        background-color: $green-cl;
+      }
+    }
+
+    @include maxW(1023px) {
+      &_container {
+        margin-top: 120px;
+      }
+
+      &_link {
+        margin: 60px auto 0;
+        font-size: 1.4rem;
+
+        &:after {
+          bottom: -10px;
+        }
+      }
+    }
+  }
+
+  // ===== about =====
+  .about {
+    &_container {
+      position: relative;
+      margin-top: 250px;
+      padding: 0 40px;
+
+      @include maxW(1023px) {
+        margin-top: 130px;
+        padding: 0 var(--paddsp);
+      }
+    }
+
+    &_heading {
+      position: absolute;
+      top: 60px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+
+      svg {
+        margin: 0 auto;
+      }
+
+      h2 {
+        width: fit-content;
+        margin: 15px auto 0;
+        font-size: 3rem;
+        line-height: 1.2;
+        font-weight: 500;
+        letter-spacing: 1px;
+        writing-mode: vertical-rl;
+        font-feature-settings: normal;
+        color: $white-cl;
+      }
+
+      @include maxW(1023px) {
+        top: 45px;
+
+        h2 {
+          margin: 10px auto 0;
+          font-size: 2rem;
+        }
+
+        svg {
+          width: 45.59px;
+          height: auto;
+        }
+      }
+    }
+
+    &_items {
+      position: relative;
+
+      picture {
+        border-radius: 80px;
+        overflow: hidden;
+        aspect-ratio: 1 / 1;
+
+        .about_btn {
+          display: none;
+        }
+
+        &:after {
+          background-color: rgba($color: #000000, $alpha: 0.2);
+        }
+      }
+
+      &_content {
+        position: absolute;
+        bottom: 60px;
+        z-index: 2;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 45px;
+        text-align: center;
+        color: $white-cl;
+      }
+
+      &_desc {
+        line-height: 1.75;
+        font-feature-settings: "palt" 1;
+      }
+
+      @include maxW(1023px) {
+        picture {
+          border-radius: 40px;
+
+          .about_btn {
+            display: flex;
+          }
+        }
+
+        &_content {
+          position: unset;
+          display: block;
+          margin-top: 20px;
+          color: $black-cl;
+          text-align: start;
+        }
+
+        &_desc {
+          font-size: 1.3rem;
+          line-height: 1.67;
+        }
+      }
+    }
+
+    &_thumb {
+      position: relative;
+
+      picture {
+        padding-bottom: calc(680 / 1380 * 100%);
+        border-radius: 80px;
+        overflow: hidden;
+
+        &:after {
+          background-color: rgba($color: #000000, $alpha: 0.2);
+        }
+      }
+
+      &_content {
+        position: absolute;
+        bottom: 70px;
+        z-index: 2;
+        text-align: left;
+        width: 100%;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        text-align: start;
+        gap: 48px;
+        color: $white-cl;
+        padding: 0 80px;
+      }
+
+      &_desc {
+        line-height: 1.75;
+        font-feature-settings: "palt" 1;
+      }
+
+      &_heading {
+        left: auto;
+        right: 120px;
+        transform: none;
+      }
+
+      &_btn {
+        position: unset !important;
+        transform: none !important;
+      }
+
+      @include maxW(1023px) {
+        picture {
+          padding-bottom: calc(561 / 374 * 100%);
+          border-radius: 40px;
+
+          &:after {
+            background-color: rgba($color: #000000, $alpha: 0.25);
+          }
+        }
+
+        &_content {
+          bottom: 45px;
+          gap: 45px;
+          align-items: center;
+          text-align: center;
+          padding: 0;
+        }
+
+        &_desc {
+          font-size: 1.4rem;
+        }
+
+        &_heading {
+          left: 50%;
+          transform: translateX(-50%);
+        }
+      }
+    }
+
+    &_btn {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background-color: $white-cl;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      @include maxW(1023px) {
+        position: absolute;
+        bottom: 35px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 2;
+        width: 40px;
+        height: 40px;
+
+        svg {
+          width: 16px;
+          height: auto;
+        }
+      }
+    }
+
+    &_swiper {
+      display: block;
+      margin: 150px -40px 0;
+      padding: 0 40px;
+      overflow: hidden;
+      position: relative;
+
+      .swiper-slide {
+        width: max(41.667vw, 600px);
+      }
+
+      @include maxW(1023px) {
+        margin: 80px -20px 0;
+        padding: 0 var(--paddsp);
+
+        .swiper-slide {
+          width: 100%;
+        }
+      }
+    }
+
+    &_controls {
+      .swiper-button-next,
+      .swiper-button-prev {
+        font-size: 0;
+        margin: 0;
+        width: 60px;
+        height: 60px;
+        background-color: $white-cl;
+        border-radius: 50%;
+        transform: translateY(-50%);
+
+        &.swiper-button-disabled {
+          opacity: 1;
+        }
+
+        svg {
+          width: 20px;
+          height: auto;
+        }
+
+        &:after {
+          content: "";
+        }
+      }
+
+      .swiper-button-next {
+        right: 25px;
+      }
+
+      .swiper-button-prev {
+        left: 25px;
+
+        svg {
+          transform: rotate(-180deg);
+        }
+      }
+    }
+  }
 }
