--- a/assets/scss/imports/pages/_home.scss
+++ b/assets/scss/imports/pages/_home.scss
@@ -225,7 +225,7 @@
   // ===== news =====
   .news {
     &_container {
-      margin-top: 300px;
+      margin-top: calc(6.944vw + 300px);
     }
 
     &_link {
@@ -319,7 +319,6 @@
 
       picture {
         border-radius: 80px;
-        overflow: hidden;
         aspect-ratio: 1 / 1;
 
         .about_btn {
