--- a/assets/scss/imports/pages/_home.scss
+++ b/assets/scss/imports/pages/_home.scss
@@ -225,7 +225,7 @@
   // ===== news =====
   .news {
     &_container {
-      margin-top: calc(6.944vw + 300px);
+      margin-top: calc(6.944vw + 250px);
     }
 
     &_link {
@@ -526,6 +526,62 @@
 
         svg {
           transform: rotate(-180deg);
+        }
+      }
+    }
+  }
+
+  // ===== admission ====
+  .admission {
+    &_container {
+      margin-top: 250px;
+    }
+
+    &_list {
+      margin-top: 100px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 50px;
+    }
+
+    &_items {
+      picture {
+        border-radius: 40px;
+        aspect-ratio: 1/1;
+      }
+
+      p {
+        margin-top: 30px;
+        text-align: center;
+        font-size: 2rem;
+        line-height: 1.35;
+      }
+    }
+
+    @include maxW(1023px) {
+      &_container {
+        margin-top: 120px;
+      }
+
+      &_list {
+        margin-top: 50px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px 15px;
+      }
+
+      &_items {
+        &:first-child {
+          grid-column: 1 / 3;
+        }
+
+        picture {
+          border-radius: 20px;
+        }
+
+        p {
+          margin-top: 12px;
+          text-align: left;
+          font-size: 1.4rem;
         }
       }
     }
