--- a/assets/scss/imports/pages/_home.scss
+++ b/assets/scss/imports/pages/_home.scss
@@ -225,7 +225,7 @@
   // ===== news =====
   .news {
     &_container {
-      margin-top: calc(6.944vw + 250px);
+      padding-top: calc(6.944vw + 250px);
     }
 
     &_link {
