--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,7 @@
 /* pages */
 @import "imports/pages/error";
 @import "imports/pages/home";
+@import "imports/pages/about";
 
 /* utils */
 @import "imports/core/utils";
