--- a/assets/scss/imports/core/_header.scss
+++ b/assets/scss/imports/core/_header.scss
@@ -34,7 +34,7 @@
 
   &_center {
     position: fixed;
-    top: 52px;
+    top: 50px;
     z-index: 10;
 
     width: 100vw;
@@ -66,7 +66,7 @@
 
   &_right {
     position: fixed;
-    top: 58px;
+    top: 56px;
     right: 45px;
     z-index: 10;
 
@@ -144,6 +144,7 @@
   width: 100%;
   height: 100vh;
   pointer-events: none;
+  color: $black-cl;
 
   &.--show {
     .c-menu_wrapper {
@@ -263,9 +264,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px 0;
     flex: 1 1 0%;
     gap: 110px;
+    margin-top: 120px;
+    transform: translateY(-100px);
 
     a {
       margin-top: 23px;
@@ -287,6 +289,7 @@
 
     div.sub {
       transform: translateY(-50px);
+
       a {
         margin-top: 13px;
         font-size: 1.6rem;
@@ -320,8 +323,8 @@
     }
 
     &_center {
-      padding: 20px 0;
       gap: 70px;
+      transform: translateY(-80px);
 
       a {
         margin-top: 17px;
