--- a/assets/scss/imports/pages/_about.scss
+++ b/assets/scss/imports/pages/_about.scss
@@ -28,6 +28,7 @@
         width: 40px;
         height: 3px;
         background-color: $green-cl;
+        border-radius: 10px;
       }
 
       @include maxW(1023px) {
@@ -55,7 +56,7 @@
       }
 
       @include maxW(1023px) {
-        margin-top: 125px;
+        margin-top: 120px;
 
         p {
           font-size: 1.3rem;
@@ -232,7 +233,7 @@
       p {
         font-size: 1.6rem;
         font-weight: 500;
-        line-height: 1.75;
+        line-height: 1.79;
         text-align: justify;
         font-feature-settings: "palt" 1;
       }
@@ -271,6 +272,7 @@
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+          z-index: 1;
 
           h3 {
             font-size: 3rem;
@@ -306,7 +308,7 @@
         }
 
         &_trees {
-          margin-top: 70px;
+          margin-top: 45px;
 
           picture {
             padding-bottom: calc(307 / 374 * 100%);
@@ -328,7 +330,7 @@
 
       @include maxW(1023px) {
         &_thumb {
-          margin-top: 70px;
+          margin-top: 45px;
 
           picture {
             padding-bottom: 100%;
@@ -339,14 +341,9 @@
     }
 
     &_feature {
-      margin-top: 150px;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 80px;
-
-      &:first-child {
-        margin-top: 180px;
-      }
 
       &.--reverse {
         .ishikawa_feature_left {
@@ -367,12 +364,7 @@
       }
 
       @include maxW(1023px) {
-        margin-top: 145px;
         display: block;
-
-        &:first-child {
-          margin-top: 170px;
-        }
 
         &_thumb {
           margin-top: 45px;
@@ -408,8 +400,6 @@
       }
 
       @include maxW(1023px) {
-        margin-top: 170px;
-
         &_grid {
           margin-top: 45px;
           display: block;
