coding access page done :fire:

--- a/assets/scss/imports/pages/_support.scss
+++ b/assets/scss/imports/pages/_support.scss
@@ -52,6 +52,7 @@
         transition: 0.3s ease-in-out;
 
         &:hover {
+          opacity: 1;
           background-color: #dcead2;
         }
 
