--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,6 +20,7 @@
 @import "imports/pages/daily";
 @import "imports/pages/teacher";
 @import "imports/pages/support";
+@import "imports/pages/access";
 
 /* utils */
 @import "imports/core/utils";
