coding news page done :fire:

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @import "imports/pages/teacher";
 @import "imports/pages/support";
 @import "imports/pages/access";
+@import "imports/pages/news";
 
 /* utils */
 @import "imports/core/utils";
