--- a/assets/scss/imports/pages/_about.scss
+++ b/assets/scss/imports/pages/_about.scss
@@ -254,7 +254,7 @@
 
     &_content {
       margin-top: 80px;
-      padding: 0 6.25vw;
+      padding: 0 var(--paddcontent);
 
       @include maxW(1023px) {
         margin-top: 45px;
