create layout contact&admisison

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,6 +22,8 @@
 @import "imports/pages/support";
 @import "imports/pages/access";
 @import "imports/pages/news";
+@import "imports/pages/admission";
+@import "imports/pages/contact";
 
 /* utils */
 @import "imports/core/utils";
