--- a/assets/scss/imports/pages/_about.scss
+++ b/assets/scss/imports/pages/_about.scss
@@ -157,7 +157,7 @@
     }
 
     &_info {
-      margin-top: 200px;
+      padding-top: 200px;
 
       p {
         font-size: 1.6rem;
@@ -168,7 +168,7 @@
       }
 
       @include maxW(1023px) {
-        margin-top: 120px;
+        padding-top: 120px;
 
         p {
           font-size: 1.3rem;
