--- a/assets/scss/imports/pages/_admission.scss
+++ b/assets/scss/imports/pages/_admission.scss
@@ -5,6 +5,94 @@
 .admissionpage {
   // ===== admission ======
   .admission {
+    &_apply {
+      margin-top: 200px;
+      padding: 120px 0;
+      position: relative;
+      z-index: 100;
+      width: 100%;
+      background-color: #dcead2;
+      mix-blend-mode: multiply;
+      pointer-events: none;
+
+      &_inner {
+        width: max(52.778vw, 760px);
+        margin: 0 auto;
+        pointer-events: auto;
+      }
+
+      &_content {
+        margin-top: 80px;
+        text-align: center;
+        line-height: 1.75;
+      }
+
+      &_btn {
+        margin: 80px auto 0;
+        width: 600px;
+
+        a {
+          position: relative;
+          width: 100%;
+          height: 80px;
+          border-radius: 60px;
+          background-color: $green-cl;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: $white-cl;
+          font-size: 1.8rem;
+        }
+
+        div.arrow {
+          width: 60px;
+          height: 60px;
+          background-color: $white-cl;
+          border-radius: 50%;
+          position: absolute;
+          right: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+
+      @include maxW(1023px) {
+        margin-top: 120px;
+        padding: 80px var(--paddsp);
+
+        &_inner {
+          width: 100%;
+        }
+
+        &_content {
+          margin-top: 45px;
+          font-size: 1.3rem;
+        }
+
+        &_btn {
+          margin-top: 45px;
+          width: 100%;
+
+          a {
+            height: 60px;
+            font-size: 1.4rem;
+          }
+
+          div.arrow {
+            width: 40px;
+            height: 40px;
+
+            svg {
+              width: 16px;
+              height: auto;
+            }
+          }
+        }
+      }
+    }
   }
 
   // ===== faq =====
