--- a/assets/scss/imports/pages/_admission.scss
+++ b/assets/scss/imports/pages/_admission.scss
@@ -9,7 +9,7 @@
       margin-top: 200px;
       padding: 120px 0;
       position: relative;
-      z-index: 100;
+      z-index: 99;
       width: 100%;
       background-color: #dcead2;
       mix-blend-mode: multiply;
@@ -188,6 +188,236 @@
 
     &_tabs {
       margin-top: 80px;
+
+      &_title {
+        font-size: 1.7rem;
+        line-height: 1.5;
+        padding-bottom: 10px;
+        font-feature-settings: "palt" 1;
+        border-bottom: 2px solid #dde9d2;
+        display: none;
+      }
+
+      @include maxW(1023px) {
+        &_title {
+          display: block;
+        }
+      }
+    }
+
+    &_hoiku {
+      &_desc {
+        padding: 0 var(--paddcontent);
+
+        p {
+          line-height: 1.75;
+          text-align: justify;
+          font-feature-settings: "palt" 1;
+        }
+      }
+
+      &_btn {
+        margin-top: 80px;
+        padding: 0 var(--paddcontent);
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+
+        a {
+          position: relative;
+          width: 100%;
+          height: 70px;
+          border-radius: 60px;
+          border: 2px solid #dcead2;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          transition: 0.3s ease-in-out;
+
+          svg {
+            position: absolute;
+            top: 50%;
+            right: 30px;
+            transform: translateY(-50%);
+
+            &.window {
+              rect {
+                transition: 0.3s ease-in-out;
+              }
+            }
+          }
+
+          &:hover {
+            background-color: #dcead2;
+
+            svg.window {
+              rect {
+                fill: #dcead2;
+              }
+            }
+          }
+        }
+      }
+
+      &_img {
+        width: 100%;
+        height: 100%;
+
+        picture {
+          img {
+            object-fit: contain;
+          }
+        }
+      }
+
+      @include maxW(1023px) {
+        margin-top: 40px;
+
+        &_desc {
+          padding: 0;
+
+          p {
+            font-size: 1.3rem;
+          }
+        }
+
+        &_btn {
+          margin-top: 45px;
+          grid-template-columns: repeat(1, 1fr);
+          gap: 15px;
+          padding: 0;
+
+          a {
+            font-size: 1.4rem;
+            height: 60px;
+
+            svg {
+              width: 16px;
+              height: auto;
+
+              &.window {
+                width: 17px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &_process {
+      margin-top: 80px;
+
+      @include maxW(1023px) {
+        margin-top: 45px;
+      }
+
+      &_list {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 25px;
+
+        @include maxW(1023px) {
+          grid-template-columns: repeat(1, 1fr);
+          gap: 30px;
+        }
+      }
+
+      &_items {
+        position: relative;
+        width: 100%;
+
+        h3 {
+          font-size: 1.8rem;
+          font-weight: 500;
+          line-height: 1.45;
+        }
+
+        p {
+          margin-top: 20px;
+          font-size: 1.3rem;
+          line-height: 1.5;
+          text-align: justify;
+          font-feature-settings: "palt" 1;
+        }
+
+        &:last-child {
+          &:after {
+            content: none;
+          }
+
+          .admission_process_inner:after {
+            content: none;
+          }
+        }
+
+        @include maxW(1023px) {
+          position: relative;
+          width: 100%;
+          text-align: center;
+          background-color: #f5f4ec;
+          border-radius: 40px;
+          padding: 25px 25px 35px;
+
+          &:after {
+            content: "";
+            position: absolute;
+            display: inline-block;
+            width: 8px;
+            height: 8px;
+            border-bottom: 2px solid $green-cl;
+            border-left: 2px solid $green-cl;
+            bottom: -18px;
+            left: 50%;
+            transform: translateX(-50%) rotate(-45deg);
+          }
+
+          h3 {
+            font-size: 1.6rem;
+          }
+
+          p {
+            margin-top: 20px;
+            font-size: 1.2rem;
+            text-align: center;
+          }
+        }
+      }
+
+      &_inner {
+        position: relative;
+        width: 100%;
+        text-align: center;
+        background-color: #f5f4ec;
+        border-radius: 40px;
+        aspect-ratio: 1/1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:after {
+          content: "";
+          position: absolute;
+          display: inline-block;
+          width: 8px;
+          height: 8px;
+          border-bottom: 2px solid $green-cl;
+          border-left: 2px solid $green-cl;
+          right: -15px;
+          top: 50%;
+          transform: translateY(-50%) rotate(-135deg);
+        }
+
+        @include maxW(1023px) {
+          display: block;
+          background-color: transparent;
+          aspect-ratio: auto;
+          border-radius: unset;
+
+          &:after {
+            content: none;
+          }
+        }
+      }
     }
   }
 
